--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,18 @@
 }
 
 body {
-  background: var(--background);
+  background: #222222;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
 }
